@@ -163,7 +163,7 @@ function format_doll_init($doll){
 		else $obj[$key] = $def;
 	}
 
-	$obj['url'].= (zbx_empty($obj['url'])?'?':'&').'output=html';
+	$obj['url'].= (zbx_empty($obj['url'])? '?':'&').'output=html';
 
 	$obj['params']['favobj'] = 'hat';
 	$obj['params']['favref'] = $doll['id'];
@@ -196,7 +196,7 @@ function make_refresh_menu($pmid,$dollid,$cur_interval,$params=null,&$menu,&$sub
 			'javascript: setRefreshRate('.zbx_jsvalue($pmid).','.zbx_jsvalue($dollid).','.$value.','.zbx_jsvalue($params).');'.
 			'void(0);',
 			null,
-			array('outer' => ($value == $cur_interval)?'pum_b_submenu':'pum_o_submenu', 'inner'=>array('pum_i_submenu')
+			array('outer' => ($value == $cur_interval)? 'pum_b_submenu':'pum_o_submenu', 'inner'=>array('pum_i_submenu')
 		));
 	}
 	$submenu['menu_'.$dollid][] = array();
@@ -480,25 +480,24 @@ function rgb2hex($color){
 		if(zbx_strlen($value) != 2) $HEX[$id] = '0'.$value;
 	}
 
-return $HEX[0].$HEX[1].$HEX[2];
+	return $HEX[0].$HEX[1].$HEX[2];
 }
 
 function hex2rgb($color){
-	if($color[0] == '#')
-		$color = substr($color, 1);
+	if($color[0] == '#') $color = substr($color, 1);
 
 	if(zbx_strlen($color) == 6)
-		list($r, $g, $b) = array($color[0].$color[1],
-								 $color[2].$color[3],
-								 $color[4].$color[5]);
+		list($r, $g, $b) = array($color[0].$color[1], $color[2].$color[3], $color[4].$color[5]);
 	else if(zbx_strlen($color) == 3)
 		list($r, $g, $b) = array($color[0].$color[0], $color[1].$color[1], $color[2].$color[2]);
 	else
 		return false;
 
-	$r = hexdec($r); $g = hexdec($g); $b = hexdec($b);
+	$r = hexdec($r);
+	$g = hexdec($g);
+	$b = hexdec($b);
 
-return array($r, $g, $b);
+	return array($r, $g, $b);
 }
 
 function zbx_num2bitstr($num,$rev=false){
@@ -512,7 +511,7 @@ function zbx_num2bitstr($num,$rev=false){
 
 	for($i=0;$i<$len;$i++){
 		$sbin= 1 << $i;
-		$bit = ($sbin & $num)?'1':'0';
+		$bit = ($sbin & $num)? '1':'0';
 		if($rev){
 			$strbin.=$bit;
 		}
